vlib/v/checker/tests/generics_type_ambiguous.out
vlib/v/checker/tests/generics_type_ambiguous.vv:7:19: error: cannot use `int literal` as `string` in argument 4 to `test`
    5 |
    6 | fn main() {
    7 |   test(2, 2, "2", 2)
      |                   ^
    8 | }
